# mahjong

./: CMakeLists.txt  README.md  run.sh  test.py
MahjongLib/: CMakeLists.txt  main.cpp  mjscore.cpp  mjscore.h  syanten.cpp
MahjongLib/input/: 1.txt  2.txt
docs/: README.md
include/: common.h  core.h  dataloader.hpp  dfs.h  mjenum.h  mjenum_loader.h  mjscore.h  model.hpp  syanten_enum.h
input/: 01.txt
mj_enum/: CMakeLists.txt  common.h  mj_enum.cbp  mj_enum.cpp  mj_enum_reader.cpp
src/: common.cpp  core.cpp  dataloader.cpp  dfs.cpp  main.cpp  mjenum.cpp  mjenum_loader.cpp  mjscore.cpp  model.cpp  syanten_enum.cpp
